--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "postinstall": "prisma generate",
     "client": "cd client && npm run dev",
     "dev": "concurrently \" nodemon server.js\" \"npm run client\""
   },
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
     "prisma": "^5.16.1"
   }
 }
