--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "postinstall": "prisma generate",
     "client": "cd client && npm run dev",
     "dev": "concurrently \" nodemon server.js\" \"npm run client\""
   },
@@ -22,9 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
-  },
-  "devDependencies": {
-    "prisma": "^5.16.1"
+    "nodemon": "^3.1.4",
+    "prisma": "^5.16.1",
+    "request-ip": "^3.3.0"
   }
 }
