--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
     "filesize": "^10.1.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
